src/scss/_sidebar.scss
.sidebar {
  overflow-x: hidden;
  overflow-y: auto;
  color: white;
}

.sidebar__top {
  height: $search-input-height;
  padding-left: 15px;
  padding-right: 20px;
  display: flex;
  align-items: center;
}

.sidebar__content,
.sidebar__results {
  // padding-left: 15px;
  overflow-x: hidden;
  overflow-y: auto;
  height: calc(100% - #{$search-input-height});
}

.sidebar__layer-group,
.sidebar__results-group {
  margin-bottom: 15px;
}

.sidebar__results-row {
  cursor: pointer;
}

.sidebar__layer-group-title {
  // font-size: 18px;
  // font-weight: bold;
  height: 34px;
  display: flex;
  align-items: center;
  margin-bottom: 5px;
  background: black;
}

.sidebar__layer-group-title,
.sidebar__layer-block {
  padding-left: 15px;
}

.sidebar__feature-row {
  padding-left: 15px;
  cursor: pointer;
  height: 30px;
  display: flex;
  align-items: center;
  // max-width: 205px;
  margin-top: 3px;
  margin-bottom: 3px;
}


.sidebar__feature-button {
  background: $main-medium-dark-gray;
  transition: background 250ms;
  display: flex;
  align-items: center;
  flex-grow: 2;
  height: 100%;
  max-width: 195px;
  padding-left: 10px;
  border-radius: 5px;
}

.sidebar__feature-button:hover {
  background: $main-medium-gray;
  color: white;
}

.sidebar__feature-button--highlighted {
  background: $main-medium-gray;
}

// .sidebar__feature-button--off {
//   background: $main-medium-dark-gray;
//   color: grey;
// }

.sidebar__feature-button--inactive {
  opacity: 0.5;
  pointer-events: none;
  cursor: auto;
}

.sidebar__input {
  font-size: 15px;
  line-height: 30px;
  // border-top-left-radius: 5px;
  // border-bottom-left-radius: 5px;
  // margin-left: 15px !important;
  background: none;
  outline: none;
  margin: 0;
  padding: 1px 5px;
  border: none;
  width: 100%;
  cursor: text;
  color: white;
}

.sidebar__input:focus {
  // color: white;
}

.sidebar__search-return {
  cursor: pointer;
  display: flex;
  align-items: center;
}

.sidebar__text-search-return-icon {
  cursor: pointer;
}

.sidebar__text-search-return-icon,
.sidebar__search-return-icon {
  font-size: 30px;
}

.sidebar__search-return-icon::before {
  margin-left: 0px;
}

.sidebar__search-return-text {
  font-size: 15px;
  font-style: italic;
}

.sidebar--legend {
  .sidebar__text-search-return-icon,
  .sidebar__results {
    display: none;
  }
}

.sidebar--legend,
.sidebar--text-search {
  .sidebar__search-return {
    display: none;
  }
}

.sidebar--text-search,
.sidebar--click-search {
  .sidebar__search-icon,
  .sidebar__content {
    display: none;
  }
}

.sidebar--click-search {
  .sidebar__input {
    display: none;
  }
}

.sidebar--legend,
.sidebar--click-search {
  .sidebar__text-search-return-icon {
    display: none;
  }
}

